[build-system]
requires = ["setuptools>=69.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hostprobe"
version = "0.1.0"
description = "Host discovery & non-resolving domain assessment tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "dnspython>=2.4",
    "aiohttp>=3.9",
    "python-whois>=0.9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
proxy = [
    "aiohttp-socks>=0.8",
]
completion = [
    "argcomplete>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]
all = [
    "aiohttp-socks>=0.8",
    "argcomplete>=3.0",
]

[project.scripts]
hostprobe = "hostprobe.cli:main"

[tool.setuptools.packages.find]
include = ["hostprobe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
