[metadata]
name = hostprobe
version = 0.1.0
description = Host discovery & non-resolving domain assessment tool
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
packages = find:
install_requires =
    dnspython>=2.4
    aiohttp>=3.9
    python-whois>=0.9
    tomli>=2.0; python_version < "3.11"

[options.packages.find]
include = hostprobe*

[options.extras_require]
dev =
    pytest>=7.0
    pytest-asyncio>=0.23
    aioresponses>=0.7

[options.entry_points]
console_scripts =
    hostprobe = hostprobe.cli:main
